--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,5 +1,5 @@
 footer {
-    color: white;
+    color: black;
     height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
@@ -7,5 +7,5 @@ footer {
     justify-content: center;
     bottom: 0%;
     display: flex;
-    position: fixed;
+    position: absolute;
 }
